--- a/decide/census/templates/import_census.html
+++ b/decide/census/templates/import_census.html
@@ -8,11 +8,10 @@
 <body>
     <form id="importForm" enctype="multipart/form-data" method="post">
         {% csrf_token %}
-        <label for="fileInput">Attach a CSV or JSON file:</label>
-        <input type="file" id="fileInput" name="file" accept=".csv, application/json" required>
+        <label for="fileInput">Attach a CSV, JSON, or XLSX file:</label>
+        <input type="file" id="fileInput" name="file" accept=".csv, application/json, .xlsx" required>
         <button type="submit">Import Census</button>
     </form>
-
 
     <script>
         document.getElementById('importForm').addEventListener('submit', function(event) {
