--- a/decide/voting/templates/reuse_census.html
+++ b/decide/voting/templates/reuse_census.html
@@ -3,6 +3,15 @@
 {% block content %}
   <div class="container">
     <h2>Copiar Censo</h2>
+    {% if messages %}
+    <div class="messages">
+      {% for message in messages %}
+        <div class="{{ message.tags }}">
+          {{ message }}
+        </div>
+      {% endfor %}
+    </div>
+  {% endif %}
     <form method="post">
       {% csrf_token %}
       
