--- a/decide/visualizer/templates/visualizer/visualizer.html
+++ b/decide/visualizer/templates/visualizer/visualizer.html
@@ -14,44 +14,23 @@
             <div class="container-fluid">
                 <h1 class="navbar-brand">Decide</h1>
             </div>
-            <form class="language-form" id="languageForm" method="post" action="{% url 'set_language' %}">
-                {% csrf_token %}
-                <label class="language-label" for="language">Lang:</label>
-                <select class="language-select" name="language" id="language" onchange="changeLanguage(this.value)">
-                    {% for lang_code, lang_name in LANGUAGES %}
-                        {% if lang_code == LANGUAGE_CODE %}
-                            <option value="{{ lang_code }}" selected>{{ lang_name }}</option>
-                        {% else %}
-                            <option value="{{ lang_code}}">{{ lang_name }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-            </form>
-        
-            <script>
-                function changeLanguage(languageCode) {
-                    const form = document.getElementById('languageForm');
-                    form.elements.language.value = languageCode;
-                    form.submit();
-                }
-            </script>
         </nav>
           
 
         <div class="voting container">
             <h1>[[ voting.id ]] - [[ voting.name ]]</h1>
 
-            <h2 v-if="!voting.start_date">{% trans "Voting no started" %}</h2>
-            <h2 v-else-if="!voting.end_date">{% trans "Voting in progress" %}</h2>
+            <h2 v-if="!voting.start_date">Voting no started</h2>
+            <h2 v-else-if="!voting.end_date">Voting in progress</h2>
             <div v-else>
-                <h2 class="heading">{% trans "Results" %}</h2>
+                <h2 class="heading">Results</h2>
 
                 <table class="table table-bordered table-striped">
                     <thead>
                         <tr>
-                            <th>{% trans "Option" %}</th>
-                            <th>{% trans "Points" %}</th>
-                            <th>{% trans "Votes" %}</th>
+                            <th>Option</th>
+                            <th>Points</th>
+                            <th>Votes</th>
                         </tr>
                     </thead>
                     <tbody>
