refactor: Cambio de cabecera para revisión de M3 #83

--- a/decide/census/templates/export_census.html
+++ b/decide/census/templates/export_census.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-<h2>Select Census Export Format:</h2>
+<h2>Cambio para M3:</h2>
 
 <form action="{% url 'export_census' %}" method="post">
     {% csrf_token %}
