feat: Añade exportación censo XML#87

--- a/decide/census/templates/export_census.html
+++ b/decide/census/templates/export_census.html
@@ -46,6 +46,7 @@
     <button type="submit" name="export_format" value="csv">Export to CSV</button>
     <button type="submit" name="export_format" value="json">Export to JSON</button>
     <button type="submit" name="export_format" value="xlsx">Export to XLSX (Excel)</button>
+    <button type="submit" name="export_format" value="xml">Export to XML</button>
 </form>
 
 </body>
