--- a/decide/census/templates/import_census.html
+++ b/decide/census/templates/import_census.html
@@ -125,8 +125,8 @@
         <div class="line"></div>
         <form id="importForm" enctype="multipart/form-data" method="post">
             {% csrf_token %}
-            <label for="fileInput">Attach a CSV, JSON, or XLSX file:</label>
-            <input type="file" id="fileInput" name="file" accept=".csv, application/json, .xlsx" required>
+            <label for="fileInput">Attach a CSV, JSON, XLSX or XML file:</label>
+            <input type="file" id="fileInput" name="file" accept=".csv, application/json, .xlsx, .xml" required>
             <div class="line"></div>
             <button type="submit">Import Census</button>
         </form>
