fix: Realiza Cambio M3-Defesna #100

--- a/decide/voting/templates/question_list.html
+++ b/decide/voting/templates/question_list.html
@@ -6,7 +6,7 @@
     <h1 class="mb-4">Questions</h1>
 
     {% if questions %}
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered table-striped" style="background-color: dimgray;">
         <thead class="thead-dark">
             <tr>
                 <th>ID</th>
